Unique constraints validation, openapi fixes, entity spec improvements